--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <h4 class="font-weight-bold card-title">Discord</h4>
                             <h6 class="text-muted card-subtitle mb-2">Connect to my server</h6>
                         </div>
-                        <div class="card-footer"><a href="https://discord.gg/d4kFGjgKCH">Enter Server&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <div class="card-footer"><a href="https://discord.gg/d4kFGjgKCH" target="_blank">Enter Server&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                                 </svg></a></div>
                     </div>
@@ -97,7 +97,7 @@
                             <h4 class="font-weight-bold card-title">Telegram</h4>
                             <h6 class="text-muted card-subtitle mb-2">Join us on the Telegram Group</h6>
                         </div>
-                        <div class="card-footer"><a href="https://t.me/+k3qibfJCRz0zYWI1">Join Group&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <div class="card-footer"><a href="https://t.me/+k3qibfJCRz0zYWI1" target="_blank">Join Group&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                                 </svg></a></div>
                     </div>
