--- a/courses.html
+++ b/courses.html
@@ -82,8 +82,8 @@
                         <p>11hr 10min +</p>
                         <hr style="background-color: #585858;">
                         <div class="row">
-                            <div class="col-12"><button class="btn btn-info" type="button" style="width: 100%;">Keet Classroom</button></div>
-                            <div class="col-12 mt-3"><button class="btn btn-info" type="button" style="width: 100%;">Udemy</button></div>
+                            <div class="col-12"><a class="btn btn-info" role="button" style="width: 100%;" href="https://keetclassroom.com/public/course-details/14/course/Bootstrap-Studio-Tutorial-Version-6.0-Learn-Bootstrap-Studio" target="_blank">Keet Classroom</a></div>
+                            <div class="col-12 mt-3"><a class="btn btn-info" role="button" style="width: 100%;" href="https://www.udemy.com/course/bootstrap-studio-design-website-with-typing-only-10-percent-code/" target="_blank">Udemy</a></div>
                             <div class="col-12 mt-3"><button class="btn btn-info" type="button" style="width: 100%;" data-target="#modal-1" data-toggle="modal">Unlock discount</button></div>
                         </div>
                     </div>
