Updating about me
Updating about me

--- a/about-me.html
+++ b/about-me.html
@@ -77,46 +77,11 @@
                 <div class="text-center mt-2"><a class="btn btn-outline-info btn-block" role="button" href="contact-me.html">Contact me</a></div>
             </div>
             <div class="col">
-                <p class="text-justify"><br>I was born on July 02, 1992.<br>My father Rajendra Khandekar born in Kalyna, India and my Mother Neela Khandekar born in Bangaluru, Karnataka, India.<br><br>I have one younger sibling, Mrunali Khandekar (born 1999).<br><br>At the age of 18, I moved to Pune to learn animation but unfortunately, I could not complete the course. Again in 2012 I enrolled at Fergusson College, Pune as a Bachelor of Science in Animation and earned a Bachelor of Animation degree in 2015. From 2015 I started working as a freelancer Visual Effects Artist, Editor and DI artist. I worked as an Editor and DI artist in the various short film. I also directed a short film "Haath" in 2016. In 2017, I worked with "Pulse Motion Pictures" as an Editor and DI artist.<br><br>In November 2017 I worked with my photographer friend Shubham Chaudhari and I co-produced his first fantasy photoshoot.<br><br>I also have a key interest in website designing and I taught myself in website designing. After that, I also started teaching website designing to a computer science student.<br><br>I like to travel and meet new people, I practice the keyboard in my home studio. I enjoy playing badminton, coding and working out in the gym. In May 2017 I established my own business with my family. Now I am doing business in films, education and technology industries.<br><br>When I started the business I feel to upgrade myself in technology and then I started learning web technology and I found myself interested in web designing. From there I learned web designing and started a technology company and started teaching web design.<br><br></p>
+                <p class="text-justify"><br>I am Updating About Me</p>
             </div>
         </div>
     </div>
-    <div class="container mt-3">
-        <div class="row">
-            <div class="col-12 mb-2">
-                <div class="card shadow">
-                    <div class="card-body">
-                        <div class="media"><img class="img-fluid mr-3" src="assets/img/keet/180.jpg" style="width: 80px;">
-                            <div class="media-body">
-                                <h5>Director at</h5><a class="text-decoration-none text-dark" href="https://keet.in/home/about_us" target="_blank">
-                                    <p><strong>Khandekar Electronic Educational Technology Private Limited</strong></p>
-                                </a>
-                                <p>from May 2017</p><a class="text-decoration-none text-dark" href="https://economictimes.indiatimes.com/company/khandekar-electronic-educational-technology-private-limited-/U80904MH2017PTC295051" target="_blank">
-                                    <p>View at Economic Times</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 mb-2">
-                <div class="card shadow">
-                    <div class="card-body">
-                        <div class="media"><img class="img-fluid mr-3" src="assets/img/shreestays_logo%20(1).png" style="width: 80px;">
-                            <div class="media-body">
-                                <h5>Director at</h5><a class="text-decoration-none text-dark" href="https://shreestays.com/" target="_blank">
-                                    <p><strong>Shreestays Private Limited.</strong></p>
-                                </a>
-                                <p>from Nov 2019</p><a class="text-decoration-none text-dark" href="https://economictimes.indiatimes.com/company/khandekar-electronic-educational-technology-private-limited-/U80904MH2017PTC295051" target="_blank">
-                                    <p>View at Legistify</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
