--- a/saks_sort_img/documentation.html
+++ b/saks_sort_img/documentation.html
@@ -48,7 +48,7 @@
             <li><code>tkinter</code> - Python's de-facto standard GUI (Graphical User Interface) package</li>
         </ul>
         <p>To install these packages, you can use the following pip commands:</p>
-        <pre><code>pip install pillow</code></pre>
+        <pre><code>pip3 install pillow</code></pre>
 
         <h3>Installing tkinter on macOS</h3>
         <p>If <code>tkinter</code> is not installed on your macOS system, follow these steps:</p>
