New Update pushed

--- a/achievements.html
+++ b/achievements.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/jpeg" sizes="192x192" href="assets/img/192.jpg">
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/512.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -25,7 +25,6 @@
     <link rel="stylesheet" href="assets/css/Drag-And-Drop-Image.css">
     <link rel="stylesheet" href="assets/css/Hero-Carousel.css">
     <link rel="stylesheet" href="assets/css/Hero-Features.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Number-Input-Without-Arrow.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 <!-- Load Facebook SDK for JavaScript -->
@@ -57,19 +56,6 @@
 </head>
 
 <body style="font-family: Aldrich, sans-serif;">
-    <nav class="navbar navbar-light navbar-expand-md bg-white shadow">
-        <div class="container"><a class="navbar-brand" href="index.html">Karan Khandekar</a><button data-toggle="collapse" class="navbar-toggler border rounded border-dark" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="fa fa-sort-amount-desc" style="color: #000000;"></i></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" style="filter: blur(1px);">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="courses.html" style="filter: blur(1px);">Courses</a></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="contact-me.html" style="filter: blur(1px);">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="container mt-3">
         <div class="media border rounded shadow mb-3 p-2"><img class="mr-3" src="assets/img/keet/180.jpg" style="width: 80px;">
             <div class="media-body">
@@ -105,10 +91,23 @@
             </div>
         </div>
     </div>
+    <nav class="navbar navbar-light navbar-expand-md sticky-top bg-white shadow">
+        <div class="container"><a class="navbar-brand" href="index.html">Karan Khandekar</a><button data-toggle="collapse" class="navbar-toggler border rounded border-dark" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><i class="fa fa-sort-amount-desc" style="color: #000000;"></i></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="download.html" style="filter: blur(0px);">Download</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-me.html" style="filter: blur(0px);">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/custNav.js"></script>
     <script src="assets/js/Drag-And-Drop-Image.js"></script>
     <script src="assets/js/dropdown-animation.js"></script>
