--- a/download.html
+++ b/download.html
@@ -83,7 +83,7 @@
                         <p class="text-primary mb-0">Only for Saks</p>
                         <h4 class="font-weight-bold card-title">SortImg</h4>
                         <p class="card-text">When you click "Select Folder Location", the program creates two folders in the chosen location:<br><br><strong>white_background</strong>: For images with a white background<br><br><strong>non_white_background</strong>: For images without a white background</p>
-                        <div class="d-flex"><a class="btn btn-primary" role="button" href="https://drive.google.com/file/d/1-VzIgAJKs3iTlq46ANlygbumsqBC-xQL/view?usp=sharing" target="_blank">Download</a></div>
+                        <div class="d-flex"><a class="btn btn-primary" role="button" href="https://karankhandekar.github.io/saks_sort_img/dmg_download/SortImg.dmg" target="_blank">Download</a></div>
                     </div>
                 </div>
             </div>
