Website Design Updated
New look and feel of the website

--- a/downloads.html
+++ b/downloads.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Creative Bytes: Unleashing Innovation with Karan Khandekar</title>
+    <title>Downloads | Creative Bytes: Unleashing Innovation with Karan Khandekar</title>
     <meta name="theme-color" content="#161719">
-    <link rel="canonical" href="https://karankhandekar.github.io/">
-    <meta property="og:url" content="https://karankhandekar.github.io/">
+    <link rel="canonical" href="https://karankhandekar.github.io/downloads.html">
+    <meta property="og:url" content="https://karankhandekar.github.io/downloads.html">
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="Creative Bytes: Unleashing Innovation with Karan Khandekar">
@@ -17,14 +17,6 @@
     <meta property="og:image" content="https://karankhandekar.github.io/assets/img/icons/512.jpg">
     <meta name="twitter:image" content="https://karankhandekar.github.io/assets/img/icons/512.jpg">
     <meta name="description" content="Welcome to Creative Bytes, the digital realm where innovation meets creativity, curated by Karan Khandekar. Dive into a world of cutting-edge software solutions, captivating courses, and inspirational content. Join us on a journey of exploration and discovery as we push the boundaries of technology and imagination, one byte at a time.">
-    <script type="application/ld+json">
-        {
-            "@context": "http://schema.org",
-            "@type": "WebSite",
-            "name": "Creative Bytes: Unleashing Innovation with Karan Khandekar",
-            "url": "https://karankhandekar.github.io/"
-        }
-    </script>
     <link rel="apple-touch-icon" type="image/jpeg" sizes="180x180" href="assets/img/icons/180.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/icons/16.jpg">
     <link rel="icon" type="image/jpeg" sizes="16x16" href="assets/img/icons/16.jpg" media="(prefers-color-scheme: dark)">
@@ -46,101 +38,40 @@
                     </svg></span><span>Karan Khandekar</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="learning.html">Learning</a></li>
-                    <li class="nav-item"><a class="nav-link" href="downloads.html">Download</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="downloads.html">Download</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Contacts</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="bg-dark py-5">
-        <div class="container py-5">
-            <div class="row py-5">
-                <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-end mb-4">
-                    <div style="max-width: 450px;">
-                        <p class="fw-bold text-success mb-2">Hi! I am Karan Khandekar here is the punch line...</p>
-                        <h2 class="fw-bold">Imagine It. Done!</h2>
-                        <p class="my-3">Picture it in your mind, then watch it become undone.</p>
-                        <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" data-bss-recipient="cdf7f53ca50944f15bf6e27cee781c87" data-bss-redirect-url="index.html">
-                            <div class="my-2 me-2"><input class="border rounded-pill shadow-sm form-control" type="email" name="email_subscribe" placeholder="Your Email"></div>
-                            <div class="my-2"><button class="btn btn-primary shadow" type="submit">Subscribe </button></div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <div class="p-5 mx-lg-5" style="background: url(&quot;assets/img/blob.svg&quot;) center / contain no-repeat;"><img class="rounded img-fluid shadow w-100 fit-cover" style="min-height: 300px;" src="assets/img/phone-screen.png"></div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <section>
-        <div class="container bg-dark py-5">
-            <div class="row">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <p class="fw-bold text-success mb-2">Check this out...</p>
-                    <h3 class="fw-bold">Innovation in my veins, creativity in my soul,<br>With every beat I drop, I'm reaching my goal.</h3>
-                </div>
-            </div>
-            <div class="py-5 p-lg-5">
-                <div class="row row-cols-1 row-cols-md-2 d-flex d-md-flex justify-content-center mx-auto" style="max-width: 900px;">
-                    <div class="col mb-5">
-                        <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5">
-                                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-link-45deg text-success">
-                                        <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z"></path>
-                                        <path d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243z"></path>
-                                    </svg></div>
-                                <h5 class="fw-bold card-title">altli.in</h5>
-                                <p class="text-muted card-text mb-4">Intuitive, Secure &amp; Dynamic, URL Shorter, QR Code and personal bio page.<br><br></p><a class="btn btn-primary shadow" role="button" href="https://altly.in/" target="_blank">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-5">
-                        <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5">
-                                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-book text-success">
-                                        <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"></path>
-                                    </svg></div>
-                                <h5 class="fw-bold card-title">Wit Reach Blog</h5>
-                                <p class="text-muted card-text mb-4">Your Gateway to Learning!&nbsp;Unlock the Secrets of Effective Learning Strategies and Techniques.</p><a class="btn btn-primary shadow" role="button" href="https://blog.witreach.com" target="_blank">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex justify-content-center mb-4">
-                        <div class="card shadow-sm">
-                            <div class="card-body px-4 py-5 px-md-5">
-                                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon" style="top: 1rem;right: 1rem;position: absolute;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-cloud-download text-success">
-                                        <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"></path>
-                                        <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708z"></path>
-                                    </svg></div>
-                                <h5 class="fw-bold card-title">ByteCraft</h5>
-                                <p class="text-muted card-text mb-4">Where code meets creativity, crafting innovative software solutions for a digital world.</p><a class="btn btn-primary shadow" role="button" href="downloads.html">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="py-5">
-        <div class="container">
+        <div class="container py-5">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <p class="fw-bold text-success mb-2">Contacts</p>
-                    <h2 class="fw-bold">How you can reach us</h2>
+                    <h2 class="fw-bold">Download</h2>
+                    <p class="text-muted">Explore my software downloads page for access to a range of innovative tools and utilities. Enhance your digital experience with my cutting-edge solutions designed to streamline your workflow and elevate your productivity.</p>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6 col-xl-4">
-                    <div>
-                        <form class="p-3 p-xl-4" data-bss-recipient="cdf7f53ca50944f15bf6e27cee781c87" data-bss-redirect-url="index.html">
-                            <div class="mb-3"><input class="form-control" type="text" id="name-1" name="name" placeholder="Name" required=""></div>
-                            <div class="mb-3"><input class="form-control" type="email" id="email-1" name="email" placeholder="Email" required=""></div>
-                            <div class="mb-3"><textarea class="form-control" id="message-1" name="message" rows="6" placeholder="Message" required=""></textarea></div>
-                            <div><button class="btn btn-primary shadow d-block w-100" type="submit">Send </button></div>
-                        </form>
+            <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
+                <div class="col mb-4">
+                    <div><a href="download/ImgSort.html"><img class="rounded img-fluid shadow w-100 fit-cover" src="assets/img/products/SortImg%20Banner.png" style="height: 250px;"></a>
+                        <div class="py-4"><span class="badge bg-primary mb-2">For Saks Only</span>
+                            <h4 class="fw-bold">ImgSort</h4>
+                            <p class="text-muted">SortImg is a handy tool designed to help you organize your image collection quickly and effortlessly. With its easy-to-use interface, SortImg lets you sort through your images with ease, whether you're a photography enthusiast, a professional designer, or just someone who loves keeping their files neat and tidy.</p>
+                        </div>
+                        <div class="text-center d-flex justify-content-center align-items-end py-4"><a class="btn btn-primary" role="button" href="download/ImgSort.html">Learn More</a></div>
                     </div>
+                </div>
+                <div class="col mb-4">
+                    <div><a href="#"><img class="rounded img-fluid shadow w-100 fit-cover" src="assets/img/products/2.jpg" style="height: 250px;"></a>
+                        <div class="py-4"><span class="badge bg-primary mb-2">MIT Licence</span>
+                            <h4 class="fw-bold">Video to GIF (Coming Soon)</h4>
+                            <p class="text-muted">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                        </div>
+                    </div>
+                    <div class="text-center d-flex justify-content-center align-items-end py-4"><button class="btn btn-primary" type="button">Learn More</button></div>
                 </div>
             </div>
         </div>
@@ -165,7 +96,6 @@
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bold-and-dark.js"></script>
 </body>
 
