ImgSort Page update

--- a/download/ImgSort.html
+++ b/download/ImgSort.html
@@ -50,7 +50,10 @@
         <div class="py-4"><span class="badge bg-primary mb-2">For Saks Only</span>
             <h4 class="fw-bold">ImgSort</h4>
             <p class="text-muted">SortImg is a handy tool designed to help you organize your image collection quickly and effortlessly. With its easy-to-use interface, SortImg lets you sort through your images with ease, whether you're a photography enthusiast, a professional designer, or just someone who loves keeping their files neat and tidy.</p>
-            <div class="text-center d-flex justify-content-center align-items-end py-4"><a class="btn btn-primary m-2" role="button" href="https://altly.in/PyQMO" target="_blank">Download ImgSort (Apple Silicon)</a><a class="btn btn-outline-primary m-2" role="button" href="#" data-bs-target="#DocumentationSortImg" data-bs-toggle="modal">Documentation</a></div>
+            <div class="row">
+                <div class="col d-flex justify-content-center"><a class="btn btn-primary m-2" role="button" href="https://altly.in/PyQMO" target="_blank">Download ImgSort (Apple Silicon)</a></div>
+                <div class="col-md-12 col-lg-6 d-flex justify-content-center"><a class="btn btn-outline-primary m-2" role="button" href="#" data-bs-target="#DocumentationSortImg" data-bs-toggle="modal">Documentation</a></div>
+            </div>
             <h4 class="fw-bold">Use Case</h4>
             <p class="text-muted">Sorting through a large collection of images can be a daunting task, especially when you're looking for specific ones or trying to organize them neatly. That's where SortImg comes in handy! Whether you're a photography enthusiast, a designer, or just someone who wants to keep their image folders organized, SortImg simplifies the process.</p>
             <h4 class="fw-bold">Features</h4>
